# sapf

./: .gitignore  README.md  README_VSCODE.md  clang.ini  meson.build  vcpkg.json
.github/scripts/: install-debian-deps.sh
.github/workflows/: build.yml
include/: AsyncAudioFileWriter.hpp  AudioToolboxSoundFile.hpp  MathFuns.hpp  MouseTracker.hpp  OscilUGens.hpp  PortableMidiClient.hpp  PortableMidiPacket.hpp  SndfileSoundFile.hpp  Spectrogram.hpp  Testability.hpp  VM.hpp  ZArr.hpp  makeImage.hpp
src/: AsyncAudioFileWriter.cpp  AudioToolboxSoundFile.cpp  CoreOps.cpp  MathOps.cpp  Midi.cpp  MouseTracker.cpp  MouseTracker_linux.cpp  MouseTracker_mac.cpp  MouseTracker_win.cpp  OscilUGens.cpp  Parser.cpp  Play.cpp  PortableMidiClient.cpp  PortableMidiPacket.cpp  SndfileSoundFile.cpp  SoundFiles.cpp  Spectrogram.cpp  StreamOps.cpp  UGen.cpp  VM.cpp  main.cpp  makeImage.cpp  makeImage.mm
subprojects/: gtest.wrap
test/: ImageHelpers.cpp  ImageHelpers.mm  test_MathOps.cpp  test_Midi.cpp  test_OscilUgens.cpp  test_Play.cpp  test_SndfileSoundFile.cpp  test_Spectrogram.cpp  test_StreamOps.cpp
test/helpers/: ArrHelpers.hpp  ImageHelpers.hpp
tests/: test.cpp  test_dsp.cpp
